--- a/recursos/page.html
+++ b/recursos/page.html
@@ -20,7 +20,7 @@
             <!-- Email -->
             <div>
                 <label for="email" class="block text-gray-700 font-semibold mb-2">Email</label>
-                <input type="email" id="email" name="email" required class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
+                <input type="email" id="email" name="email" class="w-full px-3 py-2 border rounded focus:outline-none focus:ring-2 focus:ring-blue-500">
             </div>
 
             <!-- Método HTTP -->
@@ -45,7 +45,7 @@
         </form>
 
         <!-- Div para mostrar a resposta -->
-        <div id="response" class="mt-4 text-gray-800"></div>
+        <div id="response" class="mt-4 text-gray-800 whitespace-pre-line"></div>
     </div>
 
     <script>
@@ -58,8 +58,11 @@
             const metodo = document.getElementById('metodo').value;
             const url = 'http://127.0.0.1:5000/'; // URL do backend
 
-            // Configura o corpo da requisição
-            const bodyData = JSON.stringify({ name: nome, email: email });
+            // Configura o corpo da requisição com os dados preenchidos
+            const bodyData = {};
+            if (nome) bodyData.name = nome;
+            if (email) bodyData.email = email;
+
             const options = {
                 method: metodo,
                 headers: { 'Content-Type': 'application/json' }
@@ -67,15 +70,28 @@
 
             // Apenas POST, PUT, PATCH, DELETE enviam o body
             if (metodo !== 'GET' && metodo !== 'OPTIONS') {
-                options.body = bodyData;
+                options.body = JSON.stringify(bodyData);
             }
 
             try {
                 const response = await fetch(url, options);
+                const statusText = `Status: ${response.status} ${response.statusText}\n\n`;
+
+        
+                if (metodo === 'OPTIONS') {
+                    const allowedMethods = response.headers.get('Allow');
+                    if (allowedMethods) {
+                        const methodsArray = allowedMethods.split(',').map(method => method.trim());
+                        document.getElementById('response').textContent = statusText + "Métodos permitidos: " + methodsArray.join(', ');
+                    } else {
+                        document.getElementById('response').textContent = statusText + "Nenhum método permitido encontrado.";
+                    }
+                    return;
+                }
+
                 const result = await response.json();
-                
-                // Exibe o resultado na página
-                document.getElementById('response').textContent = JSON.stringify(result, null, 2);
+                document.getElementById('response').textContent = statusText + JSON.stringify(result, null, 2);
+
             } catch (error) {
                 document.getElementById('response').textContent = 'Erro na requisição: ' + error.message;
             }
